--- a/baseLib/core/src/main/res/layout/otherui_activity_toast.xml
+++ b/baseLib/core/src/main/res/layout/otherui_activity_toast.xml
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="--"
-        android:textColor="@color/cardview_dark_background" />
+        android:text="ddddddd"
+        android:textColor="@color/colorCC" />
 
 
 </LinearLayout>
