--- a/baseLib/core/src/main/res/layout/title_bar_content.xml
+++ b/baseLib/core/src/main/res/layout/title_bar_content.xml
@@ -10,6 +10,8 @@
         android:id="@+id/v_title_container"
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:orientation="horizontal">
 
         <TextView
@@ -23,24 +25,24 @@
             android:onClick="back"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/title_content_text"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_weight="1"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:clickable="true"
             android:layout_gravity="center"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="0dp"
+            android:layout_weight="1"
+            android:clickable="true"
             android:gravity="center"
             android:padding="10dp"
             android:singleLine="true"
-            tools:text="标题"
             android:textColor="@color/windowBg"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            tools:text="标题" />
 
         <TextView
             android:id="@+id/title_right_text"
@@ -60,17 +62,18 @@
             android:visibility="gone" />
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_width="100px"
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/title_right_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="100dp"
                 android:padding="10dp"
-                android:visibility="gone" />
+                android:src="@drawable/icon_settings"
+                android:visibility="visible" />
 
 
         </RelativeLayout>
