--- a/module_shop_mall/src/main/res/values/styles.xml
+++ b/module_shop_mall/src/main/res/values/styles.xml
@@ -1,10 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="mall_line_width40">
         <item name="android:background">@color/windowBg</item>
         <item name="android:layout_width">40dp</item>
         <item name="android:layout_height">2dp</item>
         <item name="android:layout_margin">10dp</item>
+    </style>
+
+    <!-- Toolbar相关主题 -->
+    <style name="MyToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="android:actionOverflowButtonStyle">@style/OverFlowIcon</item>
+    </style>
+
+    <!-- 溢出菜单的icon -->
+    <style name="OverFlowIcon" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:src">@drawable/logo</item>
+    </style>
+
+    <!--设置溢出菜单样式 -->
+    <style name="OverFlowMenuTheme" parent="Widget.AppCompat.PopupMenu.Overflow">
+        <!-- 设置Menu菜单的背景色 -->
+        <item name="android:background">@android:color/white</item>
+        <!-- 设置Menu菜单的字体颜色 -->
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">16sp</item>
+        <!-- 设置Menu窗口不覆盖Toolbar视图 -->
+        <item name="overlapAnchor">false</item>
+    </style>
+
+    <!--设置菜单Title的文本外观 -->
+    <style name="MyToolbarTheme.Title" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <!--设置菜单SubTitle的文本外观 -->
+    <style name="MyToolbarTheme.SubTitle" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <!--搜索框dialogFragment-->
@@ -41,5 +75,16 @@
         <item name="android:layout_height">0.8dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:background">@color/user_dividing_light</item>
+    </style>
+
+    <!--通用按钮-->
+    <style name="mall_NextBtn">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">49dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:background">@color/otherui_color_orange_f59</item>
+        <item name="android:gravity">center</item>
     </style>
 </resources>
