--- a/module_shop_mall/src/main/res/layout/mall_activity_login.xml
+++ b/module_shop_mall/src/main/res/layout/mall_activity_login.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/windowBg"
+    android:background="#FFFFFF"
     android:id="@+id/layout_login"
     android:orientation="vertical"
     >
@@ -24,8 +24,8 @@
     <ImageView
         android:layout_marginTop="85dp"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:src="@mipmap/ic_title_logo" />
+        android:layout_height="wrap_content"
+        android:src="@mipmap/login_png" />
 
     <TextView
         android:layout_width="wrap_content"
