--- a/module_shop_mall/src/main/res/layout/mall_fragment_navigation_v2.xml
+++ b/module_shop_mall/src/main/res/layout/mall_fragment_navigation_v2.xml
@@ -8,7 +8,22 @@
     android:background="@color/colorBackground">
 
     <include layout="@layout/title_bar_content"/>
-    <View style="@style/HorizontalLineStyle"/>
+    <LinearLayout
+        android:id="@+id/normal_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        tools:ignore="UselessParent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="16dp"
+            android:text="待开发中"/>
+    </LinearLayout>
+
+    <!--<View style="@style/HorizontalLineStyle"/>
 
     <LinearLayout
         android:id="@+id/normal_view"
@@ -36,5 +51,5 @@
             android:id="@+id/navigation_RecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </LinearLayout>
+    </LinearLayout>-->
 </LinearLayout>
