--- a/module_shop_mall/src/main/res/layout/mall_fragment_mycenter.xml
+++ b/module_shop_mall/src/main/res/layout/mall_fragment_mycenter.xml
@@ -106,15 +106,17 @@
                             android:layout_gravity="center_horizontal"
                             android:text="@string/user_auther"
                             android:textColor="@color/white"
+                            android:textStyle="bold"
                             android:textSize="15sp" />
 
                         <TextView
                             android:id="@+id/tv_email"
                             style="@style/text_white"
                             android:layout_below="@id/tv_name"
+                            android:layout_marginTop="10dp"
                             android:layout_gravity="center_horizontal"
                             android:text="@string/user_email"
-                            android:textSize="13sp" />
+                            android:textSize="12sp" />
                     </RelativeLayout>
 
                 </RelativeLayout>
@@ -149,10 +151,89 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:layout_marginBottom="16dp"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="0.0dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal"
+                        android:layout_weight="1">
+                        <TextView
+                            android:id="@+id/mycenter_num_publish"
+                            style="@style/text_black"
+                            android:text="0"
+                            android:textStyle="bold"
+                            android:textSize="25sp"/>
+                        <TextView
+                            style="@style/text_black"
+                            android:text="@string/user_num_publish"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0.0dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal"
+                        android:layout_weight="1">
+                        <TextView
+                            android:id="@+id/mycenter_num_sell"
+                            style="@style/text_black"
+                            android:text="0"
+                            android:textStyle="bold"
+                            android:textSize="25sp"/>
+                        <TextView
+                            style="@style/text_black"
+                            android:text="@string/user_num_sell"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0.0dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal"
+                        android:layout_weight="1">
+                        <TextView
+                            android:id="@+id/mycenter_num_buy"
+                            style="@style/text_black"
+                            android:text="0"
+                            android:textStyle="bold"
+                            android:textSize="25sp"/>
+                        <TextView
+                            style="@style/text_black"
+                            android:text="@string/user_num_buy"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0.0dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal"
+                        android:layout_weight="1">
+                        <TextView
+                            android:id="@+id/mycenter_num_collection"
+                            style="@style/text_black"
+                            android:text="0"
+                            android:textStyle="bold"
+                            android:textSize="25sp"/>
+                        <TextView
+                            style="@style/text_black"
+                            android:text="@string/user_num_collection"/>
+                    </LinearLayout>
+                </LinearLayout>
 
 
                 <LinearLayout
