--- a/module_shop_mall/src/main/res/layout/mall_activity_mycenter_setting.xml
+++ b/module_shop_mall/src/main/res/layout/mall_activity_mycenter_setting.xml
@@ -27,6 +27,7 @@
 
             <TextView
                 style="@style/text_black"
+                android:id="@+id/user_information"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
