--- a/module_shop_mall/src/main/res/drawable/mall_actionsheet_single_selector.xml
+++ b/module_shop_mall/src/main/res/drawable/mall_actionsheet_single_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/shap_ring_gray" android:state_pressed="true"/>
-    <item android:drawable="@drawable/shap_ring_gray"/>
+    <item android:drawable="@drawable/actionsheet_single_pressed" android:state_pressed="true"/>
+    <item android:drawable="@drawable/actionsheet_single_normal"/>
 </selector>
