--- a/baseLib/core/src/main/res/values/colors.xml
+++ b/baseLib/core/src/main/res/values/colors.xml
@@ -10,11 +10,11 @@
     <color name="alertdialog_line">#c6c6c6</color>
     <color name="color_4a">#4a90e2</color>
     <!--buttondialog颜色-->
-    <color name="otherui_color_orange_f59">#F59523</color>
+    <color name="otherui_color_orange_f59">#bc8ece</color>
     <color name="otherui_color_red_f59_f05">#F0561A</color>
 
-    <color name="mainColor">#F49423</color>
-    <color name="orange_fba">#FBA135</color>
+    <color name="mainColor">#a590ad</color>
+    <color name="orange_fba">#a590ad</color>
     <color name="windowBg">#F8F8F8</color>
     <color name="white">#FFFFFF</color>
     <color name="color66">#666666</color>
@@ -25,7 +25,7 @@
     <color name="colorCC">#CCCCCC</color>
     <color name="colorFA">#FAFAFA</color>
     <color name="translucent">#26000000</color>
-    <color name="account_color_orange_f59">#F59523</color>
+    <color name="account_color_orange_f59">#a590ad</color>
     <color name="colorFEFF">#FEFEFF</color>
     <color name="colorE75">#E75353</color>
 
@@ -39,8 +39,8 @@
     <color name="colorBackground">#ece5e5</color>
     <color name="grey_search">#FF999999</color>
     <color name="light_light_yellow">#dcd3ba</color>
-    <color name="light_yellow">#e7c054</color>
-    <color name="light_red">#e26d2e</color>
+    <color name="light_yellow">#a590ad</color>
+    <color name="light_red">#a590ad</color>
     <color name="light_deep_red">#f9382a</color>
     <color name="deep_red">#dc3b1f</color>
     <color name="while_most_color">#e4e4e4</color>
@@ -52,7 +52,7 @@
     <color name="grey_divider">#E5E5E5</color>
     <color name="blue">#35B0FF</color>
     <color name="deep_blue">#0539be</color>
-    <color name="yellow">#f39c12</color>
+    <color name="yellow">#a590ad</color>
     <color name="grey_bar">#ECECEC</color>
     <color name="light_green">#3fc75f</color>
     <color name="light_blue">#bf33efcd</color>
