--- a/module_common_ui/src/main/res/values/colors.xml
+++ b/module_common_ui/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F49423</color>
-    <color name="colorPrimaryDark">#F49423</color>
-    <color name="colorAccent">#F49423</color>
+    <color name="colorPrimary">#a590ad</color>
+    <color name="colorPrimaryDark">#a590ad</color>
+    <color name="colorAccent">#a590ad</color>
     <color name="colorPrimaryOverlay">#cc0094ff</color>
 
     <color name="toolBarColor">#cc0094ff</color>
