--- a/module_shop_mall/src/main/res/layout/mall_activity_home.xml
+++ b/module_shop_mall/src/main/res/layout/mall_activity_home.xml
@@ -50,7 +50,7 @@
                     android:layout_weight="1"
                     android:layout_marginBottom="1dp"
                     android:padding="0dp"
-                    android:src="@mipmap/ic_tab_add" />
+                    android:src="@mipmap/ic_tab_add1" />
 
                 <View
                     android:layout_width="0dp"
