--- a/module_shop_mall/src/main/res/layout/mall_fragment_mycenter.xml
+++ b/module_shop_mall/src/main/res/layout/mall_fragment_mycenter.xml
@@ -35,7 +35,7 @@
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
-                    android:src="@mipmap/bg_banner_my"
+                    android:src="@mipmap/bg_banner_my3"
                     app:layout_collapseMode="parallax" />
 
                 <View
@@ -75,7 +75,7 @@
                             android:layout_marginTop="0dp"
                             android:layout_marginBottom="0dp"
                             android:scaleType="fitXY"
-                            android:src="@mipmap/dft_avatar"
+                            android:src="@mipmap/dft_avatar3"
                             />
 
                     </RelativeLayout>
@@ -107,7 +107,7 @@
                             style="@style/text_white"
                             android:layout_gravity="center_horizontal"
                             android:text="@string/user_auther"
-                            android:textColor="@color/white"
+                            android:background="#6b569bc9"
                             android:textStyle="bold"
                             android:textSize="15sp" />
 
@@ -116,6 +116,7 @@
                             style="@style/text_white"
                             android:layout_below="@id/tv_name"
                             android:layout_marginTop="10dp"
+                            android:background="#6b569bc9"
                             android:layout_gravity="center_horizontal"
                             android:text="@string/user_email"
                             android:textSize="12sp" />
