--- a/module_shop_mall/src/main/res/values/colors.xml
+++ b/module_shop_mall/src/main/res/values/colors.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="mall_colorPrimary">#F49423</color>
-    <color name="mall_colorPrimaryDark">#F49423</color>
-    <color name="mall_colorAccent">#F49423</color>
+    <color name="mall_colorPrimary">#a590ad</color>
+    <color name="mall_colorPrimaryDark">#a590ad</color>
+    <color name="mall_colorAccent">#a590ad</color>
     <color name="mall_color_66">#666666</color>
 
-    <color name="mall_yellow">#f39c12</color>
+    <color name="mall_yellow">#a590ad</color>
     <color name="mall_grey">#cccccc</color>
     <color name="mall_light_green">#3fc75f</color>
     <color name="mall_light_yellow">#e7c054</color>
     <color name="mall_blue">#35B0FF</color>
 
 
-    <color name="mall_mainColor">#F49423</color>
-    <color name="mall_orange_fba">#FBA135</color>
+    <color name="mall_mainColor">#a590ad</color>
+    <color name="mall_orange_fba">#a590ad</color>
     <color name="mall_windowBg">#F8F8F8</color>
     <color name="mall_white">#FFFFFF</color>
     <color name="mall_color66">#666666</color>
@@ -25,7 +25,7 @@
     <color name="mall_colorFA">#FAFAFA</color>
     <color name="mall_translucent">#26000000</color>
     <color name="mall_color_cc000">#cc000000</color>
-    <color name="mall_account_color_orange_f59">#F59523</color>
+    <color name="mall_account_color_orange_f59">#a590ad</color>
     <color name="mall_colorFEFF">#FEFEFF</color>
     <color name="mall_colorE75">#E75353</color>
 
