--- a/projectCore/src/main/res/values/colors.xml
+++ b/projectCore/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F49423</color>
-    <color name="colorPrimaryDark">#F49423</color>
-    <color name="colorAccent">#F49423</color>
+    <color name="colorPrimary">#a590ad</color>
+    <color name="colorPrimaryDark">#a590ad</color>
+    <color name="colorAccent">#a590ad</color>
     <color name="colorPrimaryOverlay">#cc0094ff</color>
 
     <color name="toolBarColor">#cc0094ff</color>
@@ -16,7 +16,7 @@
     <color name="colorBackground">#ece5e5</color>
     <color name="grey_search">#FF999999</color>
     <color name="light_light_yellow">#dcd3ba</color>
-    <color name="light_yellow">#e7c054</color>
+    <color name="light_yellow">#a590ad</color>
     <color name="light_red">#e26d2e</color>
     <color name="light_deep_red">#f9382a</color>
     <color name="deep_red">#dc3b1f</color>
@@ -31,7 +31,7 @@
     <color name="grey_divider">#E5E5E5</color>
     <color name="blue">#35B0FF</color>
     <color name="deep_blue">#0539be</color>
-    <color name="yellow">#f39c12</color>
+    <color name="yellow">#a590ad</color>
     <color name="grey_bar">#ECECEC</color>
     <color name="light_green">#3fc75f</color>
     <color name="light_blue">#bf33efcd</color>
@@ -43,7 +43,7 @@
     <color name="indicator_color">#115E56</color>
 
     <color name="color_66">#666666</color>
-    <color name="mainColor">#F49423</color>
+    <color name="mainColor">#a590ad</color>
     <color name="windowBg">#F8F8F8</color>
     <color name="color33">#333333</color>
 </resources>
