--- a/module_shop_mall/src/main/res/layout/mall_fragment_knowledge_system.xml
+++ b/module_shop_mall/src/main/res/layout/mall_fragment_knowledge_system.xml
@@ -5,99 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.tome.module_shop_mall.fagment.KnowledgeSystemFragment">
+    tools:context="com.example.tome.module_shop_mall.fagment.IMFragment">
 
-    <include layout="@layout/title_bar_content" />
-    <ScrollView
-        android:id="@+id/scrollView"
+    <com.example.tome.module_shop_mall.widget.MyWebView
+        android:id="@+id/im_web_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:scrollbars="none">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="16dp"
-            android:text="待开发中"/>
-    </ScrollView>
-
-    <!--<ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:scrollbars="none">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/mall_color99"
-            android:orientation="vertical">
-            &lt;!&ndash;标题&ndash;&gt;
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:gravity="center">
-
-                <View style="@style/mall_line_width40" />
-
-                <TextView
-                    android:id="@+id/tv_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="福利推荐"
-                    android:textColor="@color/windowBg"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <View style="@style/mall_line_width40" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:background="@color/mall_colorCC"
-                android:orientation="horizontal">
-
-
-                &lt;!&ndash; 圆形图&ndash;&gt;
-                <com.example.tome.core.widget.CircularImageView
-                    android:id="@+id/civ_welfare_one"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    />
-
-                &lt;!&ndash;  圆形图&ndash;&gt;
-                <com.example.tome.core.widget.CircularImageView
-                    android:id="@+id/civ_welfare_two"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    />
-
-            </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/layout_knowledge_system_List"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
-        </LinearLayout>
-    </ScrollView>-->
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
