--- a/module_shop_mall/src/main/res/layout/mall_view_notification.xml
+++ b/module_shop_mall/src/main/res/layout/mall_view_notification.xml
@@ -61,6 +61,14 @@
                 android:textColor="#000000"
                 android:text="content"
                 android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/tv_custom_id"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:textColor="#000000"
+                android:visibility="invisible"
+                android:text="content"/>
         </LinearLayout>
     </RelativeLayout>
 
